--- a/style.css
+++ b/style.css
@@ -5,4 +5,7 @@ h1,h2{
   text-align: center;
   color: aliceblue;
   font-weight: bold;
+  background-color: black;
+  margin: 0;
+  border-radius: 10px;
 }
