--- a/style.css
+++ b/style.css
@@ -7,5 +7,6 @@ h1,h2{
   font-weight: bold;
   background-color: black;
   margin: 0;
-  border-radius: 10px;
+  padding: 20px;
+  font-family: 'Courier New', Courier, monospace;
 }
